# FloriBot-ROS2

./: .gitignore  .gitmodules  README.md
bridge_ws/log/: latest_build
bridge_ws/src/: README.md
log/: latest_build
ros1_ws/devel/: .catkin
ros1_ws/devel/include/base/: Angle.h  Wheels.h
ros1_ws/devel/include/base2gazebo/: Wheels.h
ros1_ws/devel/include/baumer_radar_msgs/: RadarData.h
ros1_ws/devel/lib/base/: angle2tf  base_node
ros1_ws/devel/lib/pkgconfig/: base.pc  base2gazebo.pc  baumer_radar.pc  baumer_radar_msgs.pc  can_driver.pc  floribot_simulation.pc  maize_navigation.pc  map_msgs.pc  move_base_msgs.pc  obstacle.pc  path_planning.pc  realsense2_camera.pc  realsense2_description.pc  realsense_gazebo_plugin.pc  scan_tools.pc  sick_scan.pc  spray.pc  virtual_maize_field.pc  visu.pc
ros1_ws/devel/lib/python3/dist-packages/base/msg/: _Angle.py  _Wheels.py  __init__.py
ros1_ws/devel/lib/python3/dist-packages/virtual_maize_field/: __init__.py
ros1_ws/devel/lib/sick_scan/: radar_object_marker  sick_generic_caller  sick_scan_test
ros1_ws/devel/share/base/cmake/: base-msg-paths.cmake  baseConfig.cmake
ros1_ws/devel/share/base2gazebo/cmake/: base2gazebo-msg-paths.cmake  base2gazeboConfig.cmake
ros1_ws/devel/share/baumer_radar/cmake/: baumer_radarConfig.cmake
ros1_ws/devel/share/baumer_radar_msgs/cmake/: baumer_radar_msgs-msg-extras.cmake  baumer_radar_msgs-msg-paths.cmake  baumer_radar_msgsConfig.cmake
ros1_ws/devel/share/can_driver/cmake/: can_driverConfig.cmake
ros1_ws/devel/share/floribot_simulation/cmake/: floribot_simulationConfig.cmake
ros1_ws/devel/share/maize_navigation/cmake/: maize_navigationConfig.cmake
ros1_ws/devel/share/map_msgs/cmake/: map_msgs-msg-extras.cmake  map_msgs-msg-paths.cmake  map_msgsConfig.cmake
ros1_ws/devel/share/move_base_msgs/cmake/: move_base_msgs-msg-extras.cmake  move_base_msgs-msg-paths.cmake  move_base_msgsConfig.cmake
ros1_ws/devel/share/obstacle/cmake/: obstacleConfig.cmake
ros1_ws/devel/share/path_planning/cmake/: path_planningConfig.cmake
ros1_ws/devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
ros1_ws/devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
ros1_ws/devel/share/realsense_gazebo_plugin/cmake/: realsense_gazebo_pluginConfig.cmake
ros1_ws/devel/share/roseus/ros/base/: manifest.l
ros1_ws/devel/share/roseus/ros/base2gazebo/: manifest.l
ros1_ws/devel/share/roseus/ros/baumer_radar_msgs/: manifest.l
ros1_ws/devel/share/roseus/ros/map_msgs/: manifest.l
ros1_ws/devel/share/roseus/ros/move_base_msgs/: manifest.l
ros1_ws/devel/share/roseus/ros/realsense2_camera/: manifest.l
ros1_ws/devel/share/roseus/ros/sick_scan/: manifest.l
ros1_ws/devel/share/scan_tools/cmake/: scan_toolsConfig.cmake
ros1_ws/devel/share/sick_scan/cmake/: sick_scan-msg-paths.cmake  sick_scanConfig.cmake
ros1_ws/devel/share/spray/cmake/: sprayConfig.cmake
ros1_ws/devel/share/virtual_maize_field/cmake/: virtual_maize_fieldConfig.cmake
ros1_ws/devel/share/visu/cmake/: visuConfig.cmake
ros1_ws/src/base/msg/: Angle.msg  Wheels.msg
ros1_ws/src/base/src/base_node/: angle2tf.cpp  base_publisher.cpp
ros1_ws/src/base2gazebo/src/: PublishWheelSpeed.py
ros1_ws/src/floribot_simulation/launch/: FloriBot.launch
ros1_ws/src/floribot_simulation/urdf/: Floribot_reduced.urdf.xacro
ros1_ws/src/maize_navigation/src/: maize_navigation.py
ros1_ws/src/scan_tools/src/: cart_merger.py
ros1_ws/src/visu/src/: rviz_visu.py
ros2_ws/src/: readme.txt
ros2_ws/src/base/: CMakeLists.txt  mapping_rule_Wheels.yaml  package.xml
ros2_ws/src/base/include/base_node/: base_publisher.h
ros2_ws/src/base/include/drives/: articulated_drive.h  differential_drive.h
ros2_ws/src/base/launch/: base_node.launch.py  base_node_launch.py
ros2_ws/src/base/src/base_node/: angle2tf.cpp  base_node.cpp  base_publisher.cpp
ros2_ws/src/base/src/drives/: articulated_drive.cpp  differential_drive.cpp
ros2_ws/src/base2gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/base2gazebo/base2gazebo/: PublishWheelSpeed.py
ros2_ws/src/base2gazebo/launch/: base2gazebo.launch.py  base2gazebo_launch.py
ros2_ws/src/base2gazebo/msg/: Wheels.msg
ros2_ws/src/base2gazebo/src/: PublishWheelSpeed.py
ros2_ws/src/floribot/: CMakeLists.txt  package.xml
ros2_ws/src/floribot/config/: floribot_parameter.yaml
ros2_ws/src/floribot/launch/: own_laserscan_multi_merger.launch.py  own_scanner.launch.py  robot.launch.py
ros2_ws/src/floribot/param/: camera_front_param.yaml  camera_rear_param.yaml
ros2_ws/src/floribot/urdf/: Floribot_reduced.urdf.xacro
ros2_ws/src/floribot_simulation/: CMakeLists.txt  package.xml
ros2_ws/src/floribot_simulation/config/: floribot_parameter.yaml  joints.yaml
ros2_ws/src/floribot_simulation/launch/: FloriBot.launch.py
ros2_ws/src/floribot_simulation/urdf/: Floribot_reduced.urdf  Floribot_reduced.urdf.xacro  Floribot_reduced_with_cam.urdf.xacro
ros2_ws/src/maize_navigation/: package.xml  setup.cfg  setup.py
ros2_ws/src/maize_navigation/launch/: maize_navigation.launch.py
ros2_ws/src/maize_navigation/maize_navigation/: maize_navigation.py
ros2_ws/src/plc_connection/: CMakeLists.txt  package.xml
ros2_ws/src/plc_connection/Test/: mock_plc_server.py
ros2_ws/src/plc_connection/include/plc_connection/: plc_connection.hpp
ros2_ws/src/plc_connection/launch/: plc_connection_launch.py
ros2_ws/src/plc_connection/src/: plc_connection_lib.cpp  plc_connection_node.cpp
ros2_ws/src/plc_connection/src/network/socket/: socket.cpp
ros2_ws/src/plc_connection/src/network/udp/: udp_socket.cpp
ros2_ws/src/scan_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/scan_tools/launch/: cart_merger.launch.py
ros2_ws/src/scan_tools/scan_tools/: cart_merger.py  scan2cart.py
ros2_ws/src/visu/: CMakeLists.txt  package.xml
ros2_ws/src/visu/launch/: rviz_visu.launch.py
ros2_ws/src/visu/src/: rviz_visu.py
src/visu/launch/: rviz_visu.launch
(+32 files in other folders)
