cmake_minimum_required(VERSION 3.5)
project(base)

# Default to C99
if(NOT CMAKE_C_STANDARD)
  set(CMAKE_C_STANDARD 99)
endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Wheels.msg"
  "msg/Angle.msg"
  DEPENDENCIES std_msgs
)

install(
  FILES 
  mapping_rule_Wheels.yaml
  mapping_rule_Angle.yaml
  DESTINATION share/${PROJECT_NAME})


ament_package()
