<?xml version="1.0"?>
<package format="3">
  <name>base2gazebo</name>
  <version>0.0.0</version>
  <description>The base2gazebo package</description>

  <maintainer email="jorth@stud.hs-heilbronn.de">Jannis</maintainer>
  <maintainer email="aastark@stud.hs-heilbronn.de">Aaron</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type> ament_cmake </build_type>
  </export>
</package>
